load("@bazel_skylib//rules:build_test.bzl", "build_test")
load(
    "//bazel:api.bzl",
    "mojo_binary",
    "mojo_test",
    "pkg_filegroup",
    "pkg_files",
    "strip_prefix",
)

package(default_visibility = ["//max:consumers"])

_RUN_BENCHMARKS = [
    "algorithm/parallelize_overhead.mojo",
    "nn/bench_gather_reduce.mojo",
]

_EXTRA_CONSTRAINTS = {
    "algorithm/parallelize_overhead.mojo": select({
        "//:asan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    "gpu/comm/bench_allgather.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # No multi-GPU Metal machines exist
    "gpu/comm/bench_allreduce.mojo": ["//:nvidia_gpu"],  # FIXME: KERN-1377
    "gpu/comm/bench_allreduce_residual_rmsnorm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # No multi-GPU Metal machines exist
    "gpu/comm/bench_broadcast.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # No multi-GPU Metal machines exist
    "gpu/comm/bench_reducescatter.mojo": ["//:nvidia_gpu"],  # Requires P2P for reduce-scatter
    "gpu/comm/bench_ep_dispatch.mojo": ["//:nvidia_gpu"],  # Requires NVSHMEM shmem_module_init
    "gpu/comm/bench_ep_combine.mojo": ["//:nvidia_gpu"],  # Requires NVSHMEM shmem_module_init
    "nn/bench_gather_reduce.mojo": ["@platforms//:incompatible"],  # TODO(KERN-464): re-enable and remove this tag
    "gpu/nn/bench_kv_cache_ragged_qkv_matmul.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: PRDT-506
    "gpu/linalg/bench_apple_gpu_matmul.mojo": ["//:apple_gpu"],  # Apple M5 simdgroup matmul (incl. split-K) — Metal only
    "gpu/nn/bench_conv2d_apple.mojo": ["//:apple_gpu"],  # Apple M5 im2col conv2d vs naive — Metal only
    "gpu/nn/bench_apple_fa_prefill.mojo": ["//:apple_gpu"],  # Apple M5 MMA flash-attention prefill (no-SMEM + SMEM-staged) — Metal only
    "gpu/linalg/bench_matmul.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: PRDT-506
    "gpu/bench_matmul_mxfp4.mojo": ["//:amd_gpu"],
    "gpu/linalg/bench_grouped_matmul_dequant_mxfp4_amd.mojo": ["//:amd_gpu"],
    "gpu/linalg/bench_grouped_matmul_amd.mojo": ["//:amd_gpu"],
    "gpu/bench_topk.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MSTDL-1880
    "gpu/nn/bench_mla.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: KERN-2317
    "gpu/linalg/bench_grouped_matmul.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-3161
    "gpu/linalg/bench_blockwise_fp8_1d2d.mojo": ["//:b200_gpu"],  # SM100-specific blockwise FP8
    "gpu/linalg/bench_mma_throughput_sm100.mojo": ["//:b200_gpu"],  # SM100 tcgen05 MMA tile-size microbench
    "gpu/linalg/profile_grouped_matmul_swiglu_nvfp4.mojo": ["//:b200_gpu"],  # SM100-specific grouped block-scaled matmul
    "gpu/linalg/bench_bmm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-3161
    "gpu/nn/bench_mha.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-3161
    "gpu/nn/bench_fp8_index.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Kernel uses NVIDIA SM90 TMA primitives; Metal AIR codegen crashes.
    "gpu/nn/bench_conv2d_sm100.mojo": ["//:b200_gpu"],  # SM100-specific TMA im2col
    "gpu/nn/bench_mha_prefill_v2.mojo": ["//:mi355_gpu"],  # gfx950 MFMA 32x32x16 BF16 + from_expcnt
    "gpu/nn/bench_mha_prefill_v2_paged.mojo": ["//:mi355_gpu"],  # gfx950 MFMA 32x32x16 BF16 + paged KV operand
    "gpu/linalg/bench_block_scaled_matmul.mojo": ["//:b200_gpu"],  # SM100-specific block-scaled matmul
    "gpu/linalg/bench_matmul_tma_epilogue.mojo": ["//:b200_gpu"],  # SM100-specific TMA epilogue matmul
    "gpu/linalg/bench_matmul_1d_tma_epilogue.mojo": ["//:b200_gpu"],  # SM100-specific 1D bias TMA epilogue matmul
    "gpu/nn/bench_moe_routing.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Requires NVIDIA GPU warp primitives
    "gpu/bench_cp_async_bulk.mojo": ["//:b200_gpu"],  # cp.async.bulk requires SM100+ architecture
    "gpu/comm/bench_scatter.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: GEN-535
    "gpu/nn/bench_argsort.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: GEN-535
    "gpu/nn/profile_gemv_partial_norm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Kernel uses device-scope atomics (_DEVICE_SCOPE) unsupported on Metal.
    "gpu/nn/trace_gemv_partial_norm.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # Kernel uses device-scope atomics (_DEVICE_SCOPE) unsupported on Metal.
}

_CPU_TESTS = glob(
    ["**/*.mojo"],
    exclude = [
        "**/*.yaml",
        "autotune/**",
        "demos/**",
        "gpu/**",
        "misc/**",
        "packages/**",
    ] + _RUN_BENCHMARKS,
)

[
    mojo_binary(
        name = src.split(".")[0],
        srcs = [src],
        enable_assertions = False,
        target_compatible_with = _EXTRA_CONSTRAINTS.get(src, []),
        deps = [
            "//max:comm",
            "//max:internal_utils",
            "//max:layout",
            "//max:nn",
            "@mojo//:std",
        ],
    )
    for src in _CPU_TESTS
]

[
    build_test(
        name = src + ".test",
        targets = [src.split(".")[0]],
    )
    for src in _CPU_TESTS
]

[
    mojo_test(
        name = src + ".test",
        size = "enormous",
        srcs = [src],
        args = ["-t"],
        enable_assertions = False,
        target_compatible_with = _EXTRA_CONSTRAINTS.get(src, []),
        deps = [
            "//max:comm",
            "//max:internal_utils",
            "//max:layout",
            "//max:nn",
            "@mojo//:std",
        ],
    )
    for src in _RUN_BENCHMARKS
]

[
    mojo_binary(
        name = src.split(".")[0],
        srcs = [src],
        data = select({
            "//:nvidia_gpu": ["@nvshmem_prebuilt//:host"],
            "//conditions:default": [],
        }),
        enable_assertions = False,
        env = select({
            "//:nvidia_gpu": {"MODULAR_SHMEM_LIB_DIR": "../+http_archive+nvshmem_prebuilt"},
            "//conditions:default": {},
        }),
        target_compatible_with = ["//:has_gpu"] + _EXTRA_CONSTRAINTS.get(src, []),
        deps = [
            "//max:comm",
            "//max:internal_utils",
            "//max:layout",
            "//max:nn",
            "//max:shmem",
            "//max:structured_kernels",
            "@mojo//:std",
        ],
    )
    for src in glob(
        ["gpu/**/*.mojo"],
        exclude = [
            "gpu/nn/bench_conv2d.mojo",
            "gpu/layout/bench_tile_io_copy.mojo",
            "gpu/nn/bench_conv3d.mojo",
            # Needs `-D fp32_scores/cadence` (gated FP32-scores path);
            # the generic glob can't pass them. Dedicated target below.
            "gpu/nn/bench_mla_prefill_v2.mojo",
        ],
    )
]

[
    build_test(
        name = src + ".test",
        tags = ["gpu"],
        targets = [src.split(".")[0]],
    )
    for src in glob(
        ["gpu/**/*.mojo"],
        exclude = [
            "gpu/nn/bench_conv2d.mojo",
            "gpu/layout/bench_tile_io_copy.mojo",
            "gpu/nn/bench_conv3d.mojo",
            # Needs `-D fp32_scores/cadence` (gated FP32-scores path);
            # the generic glob can't pass them. Dedicated target below.
            "gpu/nn/bench_mla_prefill_v2.mojo",
        ],
    )
]

# MlaPrefillV2 device-timed TFLOPS bench.
# Delegates numeric steps to the gated MlaPrefillV2Core FP32-scores / reference-cadence
# path, so it MUST compile with `-D fp32_scores=true -D cadence=true`
# (enables the gated path for THIS compile only; no kernel source is modified).
# gfx950 / MFMA 32x32x64 FP8. Excluded from the generic gpu/** glob above.
mojo_binary(
    name = "gpu/nn/bench_mla_prefill_v2",
    srcs = ["gpu/nn/bench_mla_prefill_v2.mojo"],
    copts = [
        "-D",
        "fp32_scores=true",
        "-D",
        "cadence=true",
    ],
    enable_assertions = False,
    target_compatible_with = ["//:mi355_gpu"],
    deps = [
        "//max:comm",
        "//max:internal_utils",
        "//max:layout",
        "//max:nn",
        "//max:shmem",
        "//max:structured_kernels",
        "@mojo//:std",
    ],
)

build_test(
    name = "gpu/nn/bench_mla_prefill_v2.test",
    tags = ["gpu"],
    targets = ["gpu/nn/bench_mla_prefill_v2"],
)

# Runnable GPU benchmark targets (mojo_test wrappers so they execute on the
# remote GPU via `bazel test --config=remote-b200 ...`).
mojo_test(
    name = "gpu/nn/bench_conv3d.mojo.run",
    size = "enormous",
    srcs = ["gpu/nn/bench_conv3d.mojo"],
    enable_assertions = False,
    exec_properties = {
        "test.resources:gpu-memory": "6",
    },
    tags = [
        "gpu",
        "manual",
    ],
    # Any GPU — B200 routes through dispatch_qslice_conv3d_sm100 /
    # dispatch_im2col_matmul_conv3d, MI355X routes through
    # dispatch_amd_4wave_conv3d / dispatch_im2col_matmul_conv3d.
    # The bench's `impl` runtime arg picks which dispatcher to time
    # per shape.
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:layout",
        "//max:nn",
        "@mojo//:std",
    ],
)

mojo_test(
    name = "gpu/nn/bench_conv2d.mojo.run",
    size = "enormous",
    srcs = ["gpu/nn/bench_conv2d.mojo"],
    enable_assertions = False,
    exec_properties = {
        "test.resources:gpu-memory": "6",
    },
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:b200_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:layout",
        "//max:nn",
        "@mojo//:std",
    ],
)

mojo_test(
    name = "gpu/layout/bench_tile_io_copy.mojo.run",
    size = "enormous",
    srcs = ["gpu/layout/bench_tile_io_copy.mojo"],
    enable_assertions = False,
    exec_properties = {
        "test.resources:gpu-memory": "1",
    },
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:layout",
        "@mojo//:std",
    ],
)

pkg_files(
    name = "kernel_benchmark_input_files",
    srcs = glob(
        [
            "**/*.mojo",
            "**/*.yaml",
        ],
        exclude = [
            "demos/**",
            "misc/**",
            "packages/**",
        ],
    ),
    prefix = "kernel-benchmark",
    strip_prefix = strip_prefix.from_pkg(""),
)

pkg_filegroup(
    name = "kernel_benchmark_files",
    srcs = [
        ":kernel_benchmark_input_files",
        "//max/kernels/benchmarks/autotune:autotune_files",
    ],
)
