load("//bazel:api.bzl", "mojo_library", "pkg_filegroup", "pkg_files", "strip_prefix")
load("//bazel:config.bzl", "ALLOW_UNUSED_TAG")

package(default_visibility = ["//max:consumers"])

# Auto-discover all kernel library sub-packages, excluding private (underscore-
# prefixed) libraries.
_KERNEL_LIBS = [
    lib
    for lib in subpackages(include = ["*"])
    if not lib.startswith("_")
]

# Top-level packages excluded from the auto-discovery loop below. Nested
# exclusions (e.g. graph_compiler/builtin_primitives) live in the BUILD file
# for that container package; see //max/kernels/src/graph_compiler/BUILD.bazel.
_EXCLUDED_KERNEL_LIBS = (
    "layout",  # this package ships with Mojo and the docs are built for mojolang.org
    "graph_compiler",  # this is a container, not a real package; see //max/kernels/src/graph_compiler:docs
    "internal_utils",  # internal helpers
    "weights_registry",  # internal weight registration helpers
)

# This mojo_library call is for documentation purposes only. This target exists
# so that `__init__.mojo` produces an `index.md` for `/max/api/kernels/`.
# Because each kernel sub-package is its own Bazel package (used throughout the
# codebase as `//max:linalg`, `//max:nn`, etc.), the per-sub-package `.docs` are
# stitched into the published tree by the `docs` `pkg_filegroup` below.
# This also means the `index.md` file doesn't know about its sub-packages and
# MojoDoc can't generate a list of links to them. To work around this, we
# use the post-process-docs.py script to generate that list of links.
mojo_library(
    name = "kernels_index",
    srcs = ["__init__.mojo"],
    docs_base_path = "kernels",
    docs_title = "kernels",
    tags = [
        "manual",
        ALLOW_UNUSED_TAG,
    ],
    deps = ["@mojo//:std"],
)

pkg_files(
    name = "index.docs",
    srcs = [":kernels_index.docs"],
    strip_prefix = strip_prefix.from_pkg("kernels_index.docs"),
    tags = ["manual"],
)

[
    pkg_files(
        name = lib + ".docs",
        srcs = ["//max/kernels/src/" + lib + ":" + lib + ".docs"],
        renames = {
            "//max/kernels/src/" + lib + ":" + lib + ".docs": lib,
        },
        tags = ["manual"],
    )
    for lib in _KERNEL_LIBS
    if lib not in _EXCLUDED_KERNEL_LIBS
]

pkg_filegroup(
    name = "docs",
    srcs = [":index.docs"] + [lib + ".docs" for lib in _KERNEL_LIBS if lib not in _EXCLUDED_KERNEL_LIBS] + [
        "//max/kernels/src/graph_compiler:docs",
    ],
    prefix = "max/api/kernels",
    tags = ["manual"],
)
