load("//bazel:api.bzl", "pkg_filegroup", "pkg_files")

package(default_visibility = ["//max:consumers"])

# Auto-discover all kernel library sub-packages, excluding private (underscore-
# prefixed) libraries.
_KERNEL_LIBS = [
    lib
    for lib in subpackages(include = ["*"])
    if not lib.startswith("_")
]

# Top-level packages excluded from the auto-discovery loop below. Nested
# exclusions (e.g. graph_compiler/builtin_primitives) live in the BUILD file
# for that container package; see //max/kernels/src/graph_compiler/BUILD.bazel.
_EXCLUDED_KERNEL_LIBS = (
    "layout",  # this package ships with Mojo and the docs are built for mojolang.org
    "graph_compiler",  # this is a container, not a real package; see //max/kernels/src/graph_compiler:docs
    "internal_utils",  # internal helpers
    "weights_registry",  # internal weight registration helpers
)

# Static landing page for `/max/api/kernels/`. Each kernel sub-package is its
# own Bazel package (used throughout the codebase as `//max:linalg`, `//max:nn`,
# etc.), so per-sub-package `.docs` are stitched into the published tree by the
# `docs` `pkg_filegroup` below. The post-process-docs.py script injects a
# `## Packages` listing into this page from the assembled sub-package index
# files.
pkg_files(
    name = "index.docs",
    srcs = ["index.md"],
    tags = ["manual"],
)

[
    pkg_files(
        name = lib + ".docs",
        srcs = ["//max/kernels/src/" + lib + ":" + lib + ".docs"],
        renames = {
            "//max/kernels/src/" + lib + ":" + lib + ".docs": lib,
        },
        tags = ["manual"],
    )
    for lib in _KERNEL_LIBS
    if lib not in _EXCLUDED_KERNEL_LIBS
]

pkg_filegroup(
    name = "docs",
    srcs = [":index.docs"] + [lib + ".docs" for lib in _KERNEL_LIBS if lib not in _EXCLUDED_KERNEL_LIBS] + [
        "//max/kernels/src/graph_compiler:docs",
    ],
    prefix = "max/api/kernels",
    tags = ["manual"],
)
