load("//bazel:api.bzl", "mojo_library")

mojo_library(
    name = "test_user_op",
    testonly = True,
    srcs = glob(["Inputs/test_user_op/*.mojo"]),
    validate_missing_docs = False,
    visibility = ["//visibility:public"],
    deps = [
        "@mojo//:compiler",
        "@mojo//:stdlib",
        "@mojo//:tensor",
    ],
)

mojo_library(
    name = "counter_ops",
    testonly = True,
    srcs = glob(["Inputs/counter_ops/*.mojo"]),
    validate_missing_docs = False,
    visibility = [":__subpackages__"],
    deps = [
        "@mojo//:compiler_internal",
        "@mojo//:register",
        "@mojo//:stdlib",
        "@mojo//:tensor",
    ],
)

mojo_library(
    name = "compile_config_ops",
    testonly = True,
    srcs = glob(["Inputs/compile_config_ops/*.mojo"]),
    validate_missing_docs = False,
    visibility = [":__subpackages__"],
    deps = [
        "@mojo//:compiler",
        "@mojo//:register",
        "@mojo//:stdlib",
        "@mojo//:tensor",
    ],
)

mojo_library(
    name = "kernel_verification_ops",
    testonly = True,
    srcs = glob(["Inputs/kernel_verification_ops/*.mojo"]),
    validate_missing_docs = False,
    visibility = [":__subpackages__"],
    deps = [
        "@mojo//:compiler_internal",
        "@mojo//:register",
        "@mojo//:stdlib",
        "@mojo//:tensor",
    ],
)
