load("//bazel:api.bzl", "mojo_library")

package(default_visibility = [
    "//:__pkg__",
    "//max/tests:__subpackages__",
    "//open-source/max/max/tests:__subpackages__",
])

mojo_library(
    name = "test_user_op",
    testonly = True,
    srcs = glob(["Inputs/test_user_op/*.mojo"]),
    validate_missing_docs = False,
    deps = [
        "//max:compiler",
        "//max:tensor",
        "@mojo//:std",
    ] + select({
        "//:emit_mojo_enabled": ["//max:MOGGKernelAPI"],
        "//conditions:default": [],
    }),
)

mojo_library(
    name = "counter_ops",
    testonly = True,
    srcs = glob(["Inputs/counter_ops/*.mojo"]),
    validate_missing_docs = False,
    deps = [
        "//max:compiler_internal",
        "//max:register",
        "//max:tensor",
        "@mojo//:std",
    ],
)

mojo_library(
    name = "compile_config_ops",
    testonly = True,
    srcs = glob(["Inputs/compile_config_ops/*.mojo"]),
    validate_missing_docs = False,
    deps = [
        "//max:compiler",
        "//max:register",
        "//max:tensor",
        "@mojo//:std",
    ],
)

mojo_library(
    name = "kernel_verification_ops",
    testonly = True,
    srcs = glob(["Inputs/kernel_verification_ops/*.mojo"]),
    validate_missing_docs = False,
    deps = [
        "//max:compiler_internal",
        "//max:register",
        "//max:tensor",
        "@mojo//:std",
    ],
)
