load("//bazel:api.bzl", "modular_py_test")

package(default_visibility = [
    "//:__pkg__",
    "//max/tests:__subpackages__",
    "//open-source/max/max/tests:__subpackages__",
])

modular_py_test(
    name = "max_tests",
    srcs = glob(["*.py"]),
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max",
    ],
)
