load("//bazel:api.bzl", "modular_py_test", "requirement")

package(default_visibility = [
    "//:__pkg__",
    "//SDK/integration-test:__subpackages__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

modular_py_test(
    name = "max_tests",
    srcs = glob(
        ["*.py"],
        exclude = ["test_flashinfer_cubin.py"],
    ),
    args = [
        "-n",
        "auto",
    ],
    ignore_extra_deps = [
        # Used for parallelizing tests
        requirement("pytest-xdist"),
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max:_core",
        "//max/python/max:tensor",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/mlir",
        requirement("pytest-xdist"),
        requirement("numpy"),
    ],
)

modular_py_test(
    name = "test_flashinfer_cubin",
    srcs = ["test_flashinfer_cubin.py"],
    tags = ["gpu"],
    target_compatible_with = ["//:nvidia_gpu"],
    deps = [
        requirement("flashinfer-cubin"),
    ],
)
