load("//bazel:api.bzl", "modular_run_binary_test", "mojo_binary")

package(default_visibility = ["//visibility:private"])

# TODO(GEX-3156): Investigate and enable on Apple GPU
_APPLE_GPU_INCOMPATIBLE = select({
    "//:apple_gpu": ["@platforms//:incompatible"],
    "//conditions:default": [],
})

mojo_binary(
    name = "vector_addition",
    srcs = [
        "vector_addition.mojo",
    ],
    target_compatible_with = ["//:has_gpu"] + _APPLE_GPU_INCOMPATIBLE,
    deps = [
        "//max:layout",
        "@mojo//:std",
    ],
)

modular_run_binary_test(
    name = "vector_addition_test",
    binary = "vector_addition",
    tags = ["gpu"],
)
